feat: add listener of buttons and add init windows

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 #ignoramos archivos .xml
-*pom.xml
-*windows.form
+*build.xml
+*manifest.mf
+*IniciarSesionVista.form
 /test
+/SAOPROJECT/assest
 /SAOPROYECTBYMONKEYDAY/target/
+/SAOPROJECT/nbproject/private/
+/SAOPROJECT/build/
+/SAOPROJECT/test
